--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -301,8 +301,8 @@
             <label for="call-to">Call To:</label>
             <input type="text" id="call-to" class="form-control" placeholder="Enter phone number" required>
           </div>
-          <button id="init-call-button" type="button" onclick="initiateCall()" class="btn">Call< i class="fas fa-phone"></i> </button>
-          <button id="hangup-call-button" type="button" onclick="hangUpCall()" class="btn btn-danger" disabled>Hang Up  <i class="fas fa-phone-slash"></i> </button>
+          <button id="init-call-button" type="button" onclick="initiateCall()" class="btn btn-success">Call</button>
+          <button id="hangup-call-button" type="button" onclick="hangUpCall()" class="btn btn-danger" disabled>Hang Up</button>
         </form>
         <p id="make-call-status"></p>
     
