--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -301,8 +301,8 @@
             <label for="call-to">Call To:</label>
             <input type="text" id="call-to" class="form-control" placeholder="Enter phone number" required>
           </div>
-          <button id="init-call-button" type="button" onclick="initiateCall()" class="btn btn-success">Call</button>
-          <button id="hangup-call-button" type="button" onclick="hangUpCall()" class="btn btn-danger" disabled>Hang Up</button>
+          <button id="init-call-button" type="button" onclick="initiateCall()" class="btn" style="background-color: green;">Call</button>
+          <button id="hangup-call-button" type="button" onclick="hangUpCall()" class="btn" style="background-color: red;" disabled>Hang Up</button>
         </form>
         <p id="make-call-status"></p>
     
@@ -555,20 +555,28 @@
         loadingSpinner.style.display = "none";
 
         if (response.data.callSid) {
-          statusElement.innerText = `Call initiated successfully. Call SID: ${response.data.callSid}`;
-
           activeConnection = device.connect({ conference: 'MyConferenceRoom' });
           activeConnection.on("accept", () => {
-            console.log("Joined conference!")
+            statusElement.innerText = `Calling ${callTo}`;
             document.getElementById("init-call-button").disabled = true;
             document.getElementById("hangup-call-button").disabled = false;
           });
           activeConnection.on("disconnect", () => {
-            console.log("Left conference.")
+            statusElement.innerText = `Call End`;
             document.getElementById("init-call-button").disabled = false;
             document.getElementById("hangup-call-button").disabled = true;
           });
-          activeConnection.on("error", (error) => console.error("Call error:", error));
+          activeConnection.on("reject", () => {
+            statusElement.innerText = `Call rejected by recipient`;
+            document.getElementById("init-call-button").disabled = false;
+            document.getElementById("hangup-call-button").disabled = true;
+          });
+          activeConnection.on("error", () => {
+            statusElement.innerText = `Error`;
+            console.log("Call error:", error);
+            document.getElementById("init-call-button").disabled = false;
+            document.getElementById("hangup-call-button").disabled = true;
+          });
 
         } else {
           statusElement.innerText = "Call initiated, but no Call SID received.";
