--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -301,7 +301,8 @@
             <label for="call-to">Call To:</label>
             <input type="text" id="call-to" class="form-control" placeholder="Enter phone number" required>
           </div>
-          <button id="init-call-button" type="button" onclick="initiateCall()" class="btn" style="background-color: green;">Call</button>
+          <button id="init-call-button" type="button" onclick="initiateCall()" class="btn" style="background:#00ab00;">Call</button>
+          <br><br>
           <button id="hangup-call-button" type="button" onclick="hangUpCall()" class="btn" style="background-color: red;" disabled>Hang Up</button>
         </form>
         <p id="make-call-status"></p>
