--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -460,7 +460,7 @@
       section.id = `section-${phone}`;
 
       let cover_name = getCoverName(phone);
-
+      console.log(cover_name);
       section.innerHTML = `
         <h2>${phone} Settings 
           <i class="fa fa-refresh" id="refresh-icon" data-phone="${phone}" style="cursor: pointer;"></i>
