--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -459,7 +459,7 @@
       section.classList.add("section");
       section.id = `section-${phone}`;
 
-      let cover_name = getCoverName(phone) | "";
+      let cover_name = getCoverName(phone) || "";
 
       section.innerHTML = `
         <h2>${phone} Settings 
@@ -470,7 +470,7 @@
         <div class="form-group">
           <label for="phone-number-redirection">Redirect To:</label>
 
-          <input id="cover-name-${phone}" type="text" class="btn" style="width: 300px; background:white; color:black; border:2px solid #ccc; box-shadow:none; margin-bottom:10px;" value="${cover_name}" disabled>
+          <input id="cover-name-${phone}" type="text" class="btn" style="background:white; color:black; border:2px solid #ccc; box-shadow:none; margin-bottom:10px;" value="${cover_name}" disabled>
           <button id="edit-cover-name${phone}" class="btn btn-info" style="margin-left: 10px;" onclick="editCoverName('${phone}')">Edit</button>
           <button id="save-cover-name${phone}" class="btn btn-success" style="margin-left: 10px; display: none;" onclick="saveCoverName('${phone}')">Save</button>
 
