--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -447,7 +447,7 @@
           }
         });
 
-        return response.data;
+        return response;
       } catch (error) {
         console.error("Error fetching phone numbers:", error);
         return [];
