--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -446,7 +446,7 @@
             Authorization: `Bearer ${token}`
           }
         });
-
+        console.log(JSON.stringify(response));
         return response;
       } catch (error) {
         console.error("Error fetching phone numbers:", error);
