--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -446,7 +446,7 @@
             Authorization: `Bearer ${token}`
           }
         });
-        
+
         return response.data;
       } catch (error) {
         console.error("Error fetching phone numbers:", error);
@@ -459,7 +459,7 @@
       section.classList.add("section");
       section.id = `section-${phone}`;
 
-      let cover_name = getCoverName(phone) || "";
+      let cover_name = await getCoverName(phone) || "";
 
       section.innerHTML = `
         <h2>${phone} Settings 
