--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -584,8 +584,9 @@
         if (response.data.callSid)
         {
           callSID = response.data.callSid;
-
-          activeConnection = device.connect({ conference: 'MyConferenceRoom' });
+          const uniqueConference = `${response.data.uniqueConference}`;
+          
+          activeConnection = device.connect({ conference: uniqueConference });
           activeConnection.on("accept", () => {
             statusElement.innerText = `Calling ${callTo}`;
             document.getElementById("init-call-button").disabled = true;
