--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -601,9 +601,7 @@
         {
           callSID = response.data.callSid;
           const uniqueConference = `${response.data.uniqueConference}`;
-          console.log(uniqueConference);
-          
-          activeConnection = device.connect({ conference: uniqueConference });
+          activeConnection = device.connect({ params: { conference: uniqueConference } });
           activeConnection.on("accept", () => {
             statusElement.innerText = `Calling ${callTo}`;
             document.getElementById("init-call-button").disabled = true;
