--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -605,7 +605,7 @@
           console.log('activeConnection initiated:', activeConnection);
 
           activeConnection.on("accept", () => {
-            console.log('Connection accepted. Params:', activeConnection.parameters);
+            console.log("Custom parameters:", JSON.stringify(activeConnection.customParameters.get("params")));
             statusElement.innerText = `Calling ${callTo}`;
             document.getElementById("init-call-button").disabled = true;
             document.getElementById('toggle-hold-button').disabled = false;
