--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -600,7 +600,7 @@
         if (response.data.callSid)
         {
           callSID = response.data.callSid;
-          activeConnection = device.connect();
+          activeConnection = device.connect({ conference: `TEST-ROOM-1` });
           activeConnection.on("accept", () => {
             statusElement.innerText = `Calling ${callTo}`;
             document.getElementById("init-call-button").disabled = true;
