--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -386,7 +386,6 @@
 
     document.addEventListener("DOMContentLoaded", async function () {
       phoneNumbers = await fetchPhoneNumbers();
-      initTwilio();
 
       for (const phone of phoneNumbers) {
         const section = await createPhoneSection(phone);
@@ -419,27 +418,30 @@
       sidebarNav.appendChild(logoutLink);
       });
 
-    async function initTwilio() {
-        try {
-          const response = await axios.post('https://twilio-api-t328.onrender.com/get-token');
-          const data = response.data;
+    async function initTwilio(phoneNumber) {
+      try {
+        const response = await axios.post('https://twilio-api-t328.onrender.com/get-token', {
+          phoneNumber: phoneNumber
+        });
 
-          device = new Twilio.Device(data.token, { logLevel: "debug" });
+        const data = response.data;
 
-          device.on("ready", () => console.log("✅ Twilio Device Ready"));
-          device.on("error", error => console.error("❌ Twilio Error:", error));
+        device = new Twilio.Device(data.token, { logLevel: 1 });
 
-          device.on("incoming", (connection) => {
-            console.log("📞 Incoming call from Twilio!");
+        device.on("ready", () => console.log("✅ Twilio Device Ready"));
+        device.on("error", error => console.error("❌ Twilio Error:", error));
 
-            connection.accept(); // ✅ Must accept the call!
-            console.log("✅ Call accepted!");
-          });
+        device.on("incoming", (connection) => {
+          console.log("📞 Incoming call from Twilio!");
 
-        } catch (error) {
-          console.error("❌ Error initializing Twilio:", error);
-        }
+          connection.accept(); // ✅ Must accept the call!
+          console.log("✅ Call accepted!");
+        });
+
+      } catch (error) {
+        console.error("❌ Error initializing Twilio:", error);
       }
+    }
 
     async function fetchPhoneNumbers() {
       try {
@@ -578,7 +580,7 @@
 
       try {
         if (!device) {
-          await initTwilio();
+          await initTwilio(phoneNumber);
           await new Promise((resolve, reject) => {
             device.on('ready', resolve);
             device.on('error', reject);
